--- a/template_config.json
+++ b/template_config.json
@@ -1,8 +1,8 @@
 {
     "client_secret":"",
     "client_id":"",
-    "redirect_uri":"",
-    "google_secret":"",
+    "redirect_uri":"https://roblox-verifier.herokuapp.com/",
+    "google_secret":"6Leo7oIdAAAAANSLYcieUkDQYvvAHgjLJo-8TVKq",
     "bot_token":"",
     "guild_id":"",
     "verifiedRole_id":""
