--- a/template_config.json
+++ b/template_config.json
@@ -1,6 +1,6 @@
 {
-    "client_secret":"",
-    "client_id":"",
+    "client_secret":"celMa9pxRv610kIx-CA_kSEI1c7ktMm5",
+    "client_id":"917601540796207145",
     "redirect_uri":"https://roblox-verifier.herokuapp.com/",
     "google_secret":"6Leo7oIdAAAAANSLYcieUkDQYvvAHgjLJo-8TVKq",
     "bot_token":"",
