--- a/template_config.json
+++ b/template_config.json
@@ -3,7 +3,7 @@
     "client_id":"917601540796207145",
     "redirect_uri":"https://roblox-verifier.herokuapp.com/",
     "google_secret":"6Leo7oIdAAAAANSLYcieUkDQYvvAHgjLJo-8TVKq",
-    "bot_token":"",
-    "guild_id":"",
-    "verifiedRole_id":""
+    "bot_token":"OTE3NjAxNTQwNzk2MjA3MTQ1.Ya7FBw.dfEw2J7T21X2LGvJG1c4x2FOXzs",
+    "guild_id":"896365297924198400",
+    "verifiedRole_id":"917761159728336956"
 }
